[debugger] new UI: add pin action
GitOrigin-RevId: 2ceef8f9b61b23d6f3dd04b8f9aeefbe37c70a7d